# raga

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  error_path_tests.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-04-28-pypi-publishing.md
docs/superpowers/specs/: 2026-04-28-pypi-publishing-design.md
src/raga/: __init__.py  audio.py  cli.py  completers.py  display.py  models.py  search.py  tala_cli.py
src/raga/commands/: list_ragas.py  list_talas.py  lookup.py  lookup_tala.py  play.py  suggest.py  suggest_tala.py
src/raga/data/: ragas.json  talas.json
tests/: conftest.py  test_audio.py  test_cli_raga.py  test_cli_tala.py  test_display.py  test_models.py  test_raga_list.py  test_raga_lookup.py  test_raga_suggest.py  test_tala_list.py  test_tala_lookup.py  test_tala_suggest.py
