[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raga"
version = "0.1.0"
description = "Hindustani raga reference tool"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "rapidfuzz>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "pytest-ruff>=0.4"]

[project.scripts]
raga = "raga.cli:app"
tala = "raga.tala_cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/raga"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "--ruff"
